--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: mgwnbr
 Type: Package
 Title: Multiscale Geographically Weighted Negative Binomial Regression
-Version: 0.1.0
+Version: 0.2.0
 Authors@R: c(
-	person("Juliana", "Rosa", , "julianamrosa00@gmail.com", role=c("aut", "cre")),
-	person("Jéssica", "Vasconcelos", , "jehh.vasconcelosabreu@gmail.com", role="aut"),
-	person("Alan", "da Silva", , "alansilva@unb.br", role="aut"))
+	person("Juliana", "Magalhães Rosa", , "julianamrosa00@gmail.com", role=c("aut", "cre")),
+	person("Jéssica", "Vasconcelos de Abreu", , "jehh.vasconcelosabreu@gmail.com", role="aut"),
+	person("Alan", "Ricardo da Silva", , "alansilva@unb.br", role="aut"))
 Maintainer: Juliana Rosa <julianamrosa00@gmail.com>
 Description: Fits a geographically weighted regression model with different scales
 	for each covariate. Uses the negative binomial distribution as default,
@@ -13,9 +13,9 @@ Description: Fits a geographically weighted regression model with different scal
 	Can fit the global versions of each regression and also the geographically
 	weighted alternatives with only one scale, since they are all particular
 	cases of the multiscale approach.
-	Hanchen Yu (2024). Exploring Multiscale Geographically Weighted Negative Binomial Regression, Annals of the American Association of Geographers <doi:10.1080/24694452.2023.2289986>.
-	Fotheringham AS, Yang W, Kang W (2017). Multiscale Geographically Weighted Regression (MGWR), Annals of the American Association of Geographers <doi:10.1080/24694452.2017.1352480>.
-	Da Silva AR, Rodrigues TCV (2014). Geographically Weighted Negative Binomial Regression - incorporating overdispersion, Statistics and Computing <doi:10.1007/s11222-013-9401-9>.
+	Hanchen Yu (2024). "Exploring Multiscale Geographically Weighted Negative Binomial Regression", Annals of the American Association of Geographers <doi:10.1080/24694452.2023.2289986>.
+	Fotheringham AS, Yang W, Kang W (2017). "Multiscale Geographically Weighted Regression (MGWR)", Annals of the American Association of Geographers <doi:10.1080/24694452.2017.1352480>.
+	Da Silva AR, Rodrigues TCV (2014). "Geographically Weighted Negative Binomial Regression - incorporating overdispersion", Statistics and Computing <doi:10.1007/s11222-013-9401-9>.
 License: GPL-3
 Encoding: UTF-8
 Imports: sp
