--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,9 +6,11 @@ S3method(summary,mgwnbr_model)
 export(mgwnbr)
 importFrom(sp,spDistsN1)
 importFrom(stats,dist)
+importFrom(stats,median)
 importFrom(stats,model.extract)
 importFrom(stats,model.matrix)
 importFrom(stats,pnorm)
 importFrom(stats,pt)
 importFrom(stats,qt)
 importFrom(stats,quantile)
+importFrom(stats,sd)
